manifests/project/todo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: viktormandlbauer/todo-app:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: todo-app
      port: 2349
      protocol: TCP
      targetPort: 3000
