manifests/project/todo-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
      - name: todo-backend
        image: viktormandlbauer/todo-backend:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-db
  namespace: project
spec:
  serviceName: "todo-db"
  replicas: 1
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
      - name: todo-db
        image: viktormandlbauer/todo-db:latest
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - name: todo-backend
      port: 2350
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-db
  namespace: project
spec:
  clusterIP: None
  selector:
    app: todo-db
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
