manifests/project/ingress-project.yaml
# Middleware
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: project
spec:
  stripPrefix:
    prefixes:
      - /nothing
      - /test
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: project
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: 'project-strip-prefix@kubernetescrd'
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 2349
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo-backend-svc
            port:
              number: 2350
